# game-assets-examples

./: .gitmodules  CMakeLists.txt  README.md
common/: font.h  sdl-program.cpp  sdl-program.h  settings.cpp  settings.h
hl.viewer/: CMakeLists.txt  assetviewer.settings  filesystem.cpp  filesystem.h  program.cpp  program.h  true  viewerhud.cpp  viewerhud.h
hl.viewer/common/: application.h  camera.h  glextl.cpp  log.cpp
viewer/: CMakeLists.txt  filesystem.h  program.cpp  program.h  viewerhud.cpp  viewerhud.h
viewer/common/: camera.cpp  font.cpp  font.h  log.h  main_sdl.cpp
